--- a/gallery.html
+++ b/gallery.html
@@ -234,7 +234,7 @@
                 });
         });
 
-        const backButton = document.querySelector('.black-back-button-dark');
+        const backButton = document.querySelector('.black-back-button-dark.gallery-back-button');
 
         backButton.addEventListener('click', function () {
             window.location = './selection.html';
