Contact Page Media Query

--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 <body>
 
     <header class="contact-main">
-        <button class="black-back-button">
+        <button class="black-back-button contact-back-button">
             <i class="fas fa-angle-left"></i>
             <div class="go-back">
                 <p>Go Back</p>
