--- a/gallery.html
+++ b/gallery.html
@@ -197,14 +197,19 @@
     </footer>
 
     <!-- Helps to synchronized and do multiple animations and control them the way we wanted  -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TimelineLite.min.js"></script>
+    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TimelineLite.min.js"></script> -->
+    <script type="text/javascript" src="./assets/javascript/TimelineLite/TimelineLite.min.js"></script>
+
     <!-- Animate things in CSS like Colors and move things around -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/plugins/CSSPlugin.min.js">
-    </script>
+    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/plugins/CSSPlugin.min.js"> -->
+    <script type="text/javascript" src="./assets/javascript/CSS Plugin/CSSPlugin.min.js"></script>
+
     <!-- Helps to animate things in JavaScript -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenLite.min.js"></script>
+    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenLite.min.js"></script> -->
+    <script type="text/javascript" src="./assets/javascript/TweenLite/TweenLite.min.js"></script>
+
     <!-- Transition Ease Out -->
-    <script src="./assets/javascript/transition_easein.js"></script>
+    <script type="text/javascript" src="./assets/javascript/transition_easein.js"></script>
 
     <!-- Swiper Plugin -->
     <script src="./assets/javascript/swiper-master/package/js/swiper.js"></script>
