contact us bug fix

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 <body>
     <main>
         <section class="main-section">
-            <div class="contact">
-                <a href="./contact.html" class="contact-button">Contact Us</a>
-            </div>
+            <!-- <div class="contact"> -->
+            <a href="./contact.html" class="contact-button contact">Contact Us</a>
+            <!-- </div> -->
             <div class="index-main-container">
                 <div class="main-title">
                     <h1 class="alpha">ALPHA DEVELOPERS</h1>
