--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
                         </p>
                     </div>
                     <div class="view-radius">
-                        <div class="view-portfolio">
-                            <a href="./selection.html" class="view">View Portfolio</a>
-                        </div>
+                        <a href="./selection.html" class="view view-portfolio">View Portfolio</a>
                     </div>
                 </div>
                 <div class="container-main-page-design">
