Contact Bug Fix, ajax link to src file

--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="./assets/javascript/swiper-master/package/css/swiper.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
+    <!-- JQUERY -->
+    <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script> -->
+    <script src="./assets/javascript/ajax/jquery.min.js"></script>
 
     <!-- FANCYBOX -->
     <link rel="stylesheet" href="./assets/javascript/jquery.fancybox-1.3.4/fancybox/jquery.fancybox-1.3.4.css">
@@ -60,50 +62,6 @@
             </div>
         </div>
     </header>
-    <!-- <main class="gallery-description-container"> -->
-    <!-- <main class="swiper-container gallery-description-container"> -->
-    <!-- <section class="owl-carousel owl-theme"> -->
-    <!--   <section class="swiper-wrapper owl-carousel owl-theme">
-            <div class="item swiper-slide">
-                <h2 class="gallery-title">Design</h2>
-                <p class="gallery-designer">Jc Garon</p>
-                <img class="gallery-picture" src="./assets/images/png-artwork-5 1.png" alt="sumo-image">
-            </div>
-            <div class="item swiper-slide">
-                <h2 class="gallery-title">Design</h2>
-                <p class="gallery-designer">Jc Garon</p>
-                <img class="gallery-picture" src="./assets/images/pngwave 1.png" alt="marvels-image">
-            </div>
-            <div class="item swiper-slide">
-                <h2 class="gallery-title">Design</h2>
-                <p class="gallery-designer">Jc Garon</p>
-                <img class="gallery-picture" src="./assets/images/splash-color 1.png" alt="splash-image">
-            </div>
-            <div class="item swiper-slide">
-                <h2 class="gallery-title">Design</h2>
-                <p class="gallery-designer">Jc Garon</p>
-                <img class="gallery-picture" src="./assets/images/girl-painting 1.png" alt="girl-painting">
-            </div>
-            <div class="item swiper-slide">
-                <h2 class="gallery-title">Design</h2>
-                <p class="gallery-designer">Jc Garon</p>
-                <img class="gallery-picture" src="./assets/images/pngwave 1.png" alt="marvels-image">
-            </div>
-            <div class="item swiper-slide">
-                <h2 class="gallery-title">Design</h2>
-                <p class="gallery-designer">Jc Garon</p>
-                <img class="gallery-picture" src="./assets/images/splash-color 1.png" alt="splash-image">
-            </div>
-            <div class="item swiper-slide">
-                <h2 class="gallery-title">Design</h2>
-                <p class="gallery-designer">Jc Garon</p>
-                <img class="gallery-picture" src="./assets/images/girl-painting 1.png" alt="girl-painting">
-            </div>
-        </section> -->
-
-    <!-- Add Pagination -->
-    <!--     <div class="swiper-pagination"></div>
-    </main> -->
     <main class="swiper-container">
         <section class="swiper-wrapper">
             <div class="swiper-slide">
