homebutton pop up

--- a/selection.html
+++ b/selection.html
@@ -69,6 +69,9 @@
     <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenLite.min.js"></script> -->
     <script type="text/javascript" src="./assets/javascript/TweenLite/TweenLite.min.js"></script>
 
+    <!-- JQUERY -->
+    <script src="./assets/javascript/jquery/jquery-3.4.1.min.js"></script>
+
     <!-- Custom Script -->
     <script src="./assets/javascript/script.js"></script>
 
