--- a/about.html
+++ b/about.html
@@ -12,9 +12,14 @@
 
     <!-- Custom Script -->
     <script>
-        /*    window.addEventListener('load', function () {
+        window.addEventListener('load', function () {
             document.documentElement.scrollTop = 0;
-        }); */
+
+            $("#firstname").val("");
+            $("#lastname").val("");
+            $("#email").val("");
+            $("#textarea").val("");
+        });
     </script>
 
     <!-- SWEETALERT -->
@@ -150,13 +155,15 @@
 
     </main>
 
-    <!-- Helps to synchronized and do multiple animations and control them the way we wanted  -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TimelineLite.min.js"></script>
-    <!-- Animate things in CSS like Colors and move things around -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/plugins/CSSPlugin.min.js">
-    </script>
-    <!-- Helps to animate things in JavaScript -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenLite.min.js"></script>
+    <!-- TimelineLite -->
+    <script type="text/javascript" src="./assets/javascript/TimelineLite/TimelineLite.min.js"></script>
+
+    <!-- CSS Plugin -->
+    <script type="text/javascript" src="./assets/javascript/CSS Plugin/CSSPlugin.min.js"></script>
+
+    <!-- TweenLite -->
+    <script type="text/javascript" src="./assets/javascript/TweenLite/TweenLite.min.js"></script>
+
     <!-- Transition Ease Out -->
     <script type="text/javascript" src="./assets/javascript/transition_easein.js"></script>
 
@@ -195,7 +202,7 @@
                     text: "Thank you for messaging",
                     timer: 5000
                 });
-                event.preventDefault(); //to prevent scrolling to top when sweetalert triggers
+                event.preventDefault();
                 $("#firstname").val("");
                 $("#lastname").val("");
                 $("#email").val("");
