--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 
     <!-- JQUERY -->
-    <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script> -->
     <script src="./assets/javascript/ajax/jquery.min.js"></script>
 
     <!-- FANCYBOX -->
@@ -154,16 +153,13 @@
         <img class="table-image" src="./assets/images/Table.svg" alt="chair-image">
     </footer>
 
-    <!-- Helps to synchronized and do multiple animations and control them the way we wanted  -->
-    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TimelineLite.min.js"></script> -->
+    <!-- TimelineLite -->
     <script type="text/javascript" src="./assets/javascript/TimelineLite/TimelineLite.min.js"></script>
 
-    <!-- Animate things in CSS like Colors and move things around -->
-    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/plugins/CSSPlugin.min.js"> -->
+    <!-- CSS Plugin -->
     <script type="text/javascript" src="./assets/javascript/CSS Plugin/CSSPlugin.min.js"></script>
 
-    <!-- Helps to animate things in JavaScript -->
-    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenLite.min.js"></script> -->
+    <!-- TweenLite -->
     <script type="text/javascript" src="./assets/javascript/TweenLite/TweenLite.min.js"></script>
 
     <!-- Transition Ease Out -->
