--- a/service.html
+++ b/service.html
@@ -122,16 +122,13 @@
         <img class="scroll-top-button" src="./assets/images/angle-up-solid 1.svg" alt="arrow-up">
     </div>
 
-    <!-- Helps to synchronized and do multiple animations and control them the way we wanted  -->
-    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TimelineLite.min.js"></script> -->
+    <!-- TimelineLite -->
     <script type="text/javascript" src="./assets/javascript/TimelineLite/TimelineLite.min.js"></script>
 
-    <!-- Animate things in CSS like Colors and move things around -->
-    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/plugins/CSSPlugin.min.js"> -->
+    <!-- CSS Plugin -->
     <script type="text/javascript" src="./assets/javascript/CSS Plugin/CSSPlugin.min.js"></script>
 
-    <!-- Helps to animate things in JavaScript -->
-    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenLite.min.js"></script> -->
+    <!-- TweenLite -->
     <script type="text/javascript" src="./assets/javascript/TweenLite/TweenLite.min.js"></script>
 
     <!-- Transition Ease Out -->
