--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ALPHA - Contact Us</title>
 
-    <!-- Custome Style -->
+    <!-- Custom Style -->
     <link rel="stylesheet" href="./assets/css/style.css">
 
     <!-- SWEETALERT -->
@@ -18,13 +18,13 @@
     <link rel="stylesheet" href="./assets/fontawesome/css/all.min.css">
 
     <script>
-        /*   window.addEventListener('load', function () {
+        window.addEventListener('load', function () {
             document.documentElement.scrollTop = 0;
             $("#firstname-contact-page").val("");
             $("#lastname-contact-page").val("");
             $("#email").val("");
             $("#textarea").val("");
-        }); */
+        });
     </script>
 
 </head>
@@ -174,7 +174,7 @@
                     text: "Thank you for messaging",
                     timer: 5000
                 });
-                event.preventDefault(); //to prevent scrolling to top when sweetalert triggers
+                event.preventDefault();
                 $("#firstname-contact-page").val("");
                 $("#lastname-contact-page").val("");
                 $("#email").val("");
