--- a/member.html
+++ b/member.html
@@ -13,6 +13,13 @@
     <!-- FONTAWESOME -->
     <link rel="stylesheet" href="./assets/fontawesome/css/all.min.css">
 
+    <!-- Custom Script -->
+    <script>
+        window.addEventListener('load', function () {
+            document.documentElement.scrollTop = 0;
+        });
+    </script>
+
 </head>
 
 <body class="member-body">
@@ -113,13 +120,15 @@
     <!-- JQUERY -->
     <script src="./assets/javascript/jquery/jquery-3.4.1.min.js"></script>
 
-    <!-- Helps to synchronized and do multiple animations and control them the way we wanted  -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TimelineLite.min.js"></script>
-    <!-- Animate things in CSS like Colors and move things around -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/plugins/CSSPlugin.min.js">
-    </script>
-    <!-- Helps to animate things in JavaScript -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenLite.min.js"></script>
+    <!-- TimelineLite -->
+    <script type="text/javascript" src="./assets/javascript/TimelineLite/TimelineLite.min.js"></script>
+
+    <!-- CSS Plugin -->
+    <script type="text/javascript" src="./assets/javascript/CSS Plugin/CSSPlugin.min.js"></script>
+
+    <!-- TweenLite -->
+    <script type="text/javascript" src="./assets/javascript/TweenLite/TweenLite.min.js"></script>
+
     <!-- Transition Ease Out -->
     <script type="text/javascript" src="./assets/javascript/transition_easein.js"></script>
 
