--- a/selection.html
+++ b/selection.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ALPHA - Developers</title>
 
-    <!-- Custome Style -->
+    <!-- Custom Style -->
     <link rel="stylesheet" href="./assets/css/style.css">
 
     <style>
@@ -56,17 +56,13 @@
         </div>
     </main>
 
-
-    <!-- Helps to synchronized and do multiple animations and control them the way we wanted  -->
-    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TimelineLite.min.js"></script> -->
+    <!-- TimelineLite -->
     <script type="text/javascript" src="./assets/javascript/TimelineLite/TimelineLite.min.js"></script>
 
-    <!-- Animate things in CSS like Colors and move things around -->
-    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/plugins/CSSPlugin.min.js"> -->
+    <!-- CSS Plugin -->
     <script type="text/javascript" src="./assets/javascript/CSS Plugin/CSSPlugin.min.js"></script>
 
-    <!-- Helps to animate things in JavaScript -->
-    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenLite.min.js"></script> -->
+    <!-- TweenLite -->
     <script type="text/javascript" src="./assets/javascript/TweenLite/TweenLite.min.js"></script>
 
     <!-- JQUERY -->
