--- a/about.html
+++ b/about.html
@@ -131,16 +131,16 @@
         </section>
         <footer class="about-social-links">
             <div class="about-main-container">
-                <a class="social-links-container" href="#">
+                <a class="social-links-container" href="https://www.linkedin.com/">
                     <img src="./assets/images/linkedin-in-brands 1.svg" alt="linkedin-icon">
                 </a>
-                <a class="social-links-container" href="#">
+                <a class="social-links-container" href="http://www.facebook.com/profile">
                     <img src="./assets/images/facebook-f-brands 1.svg" alt="facebook-icon">
                 </a>
-                <a class="social-links-container" href="#">
+                <a class="social-links-container" href="www.instagram.com">
                     <img src="./assets/images/instagram-brands 1.svg" alt="instagram-icon">
                 </a>
-                <a class="social-links-container" href="#">
+                <a class="social-links-container" href="https://github.com/">
                     <img src="./assets/images/github-brands 1.svg" alt="github-icon">
                 </a>
             </div>
