--- a/contact.html
+++ b/contact.html
@@ -67,19 +67,19 @@
                     <img class="contact-content-icon" src="./assets/images/link-solid 1.svg" alt="link icon">
                     <h2 class="contact-page-title">SOCIAL MEDIA:</h2>
                     <div class="image-links">
-                        <a href="#">
+                        <a href="http://www.facebook.com/profile">
                             <img class="contact-page-social-media-links" src="./assets/images/facebook-solid-black.svg"
                                 alt="facebook black">
                         </a>
-                        <a href="">
+                        <a href="www.instagram.com">
                             <img class="contact-page-social-media-links"
                                 src="./assets/images/instagram-brands-solid-black.svg" alt="instagram black">
                         </a>
-                        <a href="">
+                        <a href="https://github.com/">
                             <img class="contact-page-social-media-links"
                                 src="./assets/images/github-brands-solid-black.svg" alt="github black">
                         </a>
-                        <a href="">
+                        <a href="https://www.linkedin.com/">
                             <img class="contact-page-social-media-links"
                                 src="./assets/images/linkedin-in-brands-solid-black.svg" alt="linkedin black">
                         </a>
