--- a/member.html
+++ b/member.html
@@ -49,13 +49,15 @@
                 <div class="description-jc developers-description">
                     <h1 class="developer-name">John Christian Garon</h1>
                     <p class="skills">Web Developer</p>
-                    <p class="developer-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Pellentesque quis magna vel tortor
-                        bibendum porta. In sagittis dapibus quam id euismod. Curabitur mattis eleifend varius. Sed
-                        mattis nibh ipsum, sed rutrum odio congue id. Suspendisse fermentum nisi sapien, at suscipit
-                        purus ultrices et. Praesent ut ex diam. Nam aliquam fermentum consequat. Mauris malesuada nisl
-                        nec volutpat efficitur. Etiam sagittis viverra sollicitudin. Aliquam malesuada nulla non enim
-                        egestas tempor.</p>
+                    <p class="developer-description">Currently on my 2nd year in taking up Bachelor of Science in
+                        Information Technology with Specialization on Web and Mobile Development at Far Eastern
+                        University Institute of Technology. I have completed certain projects namely Library System: The
+                        Final Project, and the Travel Agency System: C++ Final Project in year 2019. In the same year, I
+                        became a Certified Microsoft Technology Associate in Database Fundamentals. In year 2018, I was
+                        also able to pass for the Tesda National Certificate in Computer System Servicing NCII.
+                        Knowledgeable in creating website layout or user interfaces by using standard HTML/CSS, &
+                        Javascript practices. Can gather and refine specifications and requirements based on technical
+                        needs. Trustworthy. Competent. Goal-Oriented. Passionate.</p>
                 </div>
             </div>
             <div class="developer-line">
