--- a/gallery.html
+++ b/gallery.html
@@ -64,87 +64,172 @@
     <main class="swiper-container">
         <section class="swiper-wrapper">
             <div class="swiper-slide">
-                <a class="single_image" id="single_image1" href="./assets/images/png-artwork-5 1.png">
-                    <h2 class="gallery-title">Design</h2>
+                <a class="single_image" id="single_image1" href="./assets/images/png-artwork-1000.png">
+                    <h2 class="gallery-title">Logo</h2>
                     <p class="gallery-designer">Jc Garon</p>
                     <img class="gallery-picture" src="./assets/images/png-artwork-5 1.png" alt="sumo-image">
                 </a>
             </div>
             <div class="swiper-slide">
-                <a class="single_image" id="single_image2" href="./assets/images/pngwave 1.png">
+                <a class="single_image" id="single_image2" href="./assets/images/pngwave-1000.png">
                     <h2 class="gallery-title">Design</h2>
                     <p class="gallery-designer">Jc Garon</p>
                     <img class="gallery-picture" src="./assets/images/pngwave 1.png" alt="marvels-image">
                 </a>
             </div>
             <div class="swiper-slide">
-                <a class="single_image" id="single_image3" href="./assets/images/splash-color 1.png">
+                <a class="single_image" id="single_image3" href="./assets/images/splash-color-1000.png">
                     <h2 class="gallery-title">Design</h2>
                     <p class="gallery-designer">Jc Garon</p>
                     <img class="gallery-picture" src="./assets/images/splash-color 1.png" alt="splash-image">
                 </a>
             </div>
             <div class="swiper-slide">
-                <a class="single_image" id="single_image4" href="./assets/images/girl-painting 1.png">
-                    <h2 class="gallery-title">Design</h2>
+                <a class="single_image" id="single_image4" href="./assets/images/girl-painting-1000.png">
+                    <h2 class="gallery-title">Drawing</h2>
                     <p class="gallery-designer">Jc Garon</p>
                     <img class="gallery-picture" src="./assets/images/girl-painting 1.png" alt="girl-painting">
                 </a>
             </div>
             <div class="swiper-slide">
-                <a class="single_image" id="single_image5" href="./assets/images/png-artwork-5 1.png">
-                    <h2 class="gallery-title">Design</h2>
+                <a class="single_image" id="single_image5" href="./assets/images/Polymorphism-Exercise-Relox-1000.png">
+                    <h2 class="gallery-title">Polymorphism</h2>
                     <p class="gallery-designer">Tricia Relox</p>
-                    <img class="gallery-picture" src="./assets/images/png-artwork-5 1.png" alt="sumo-image">
+                    <img class="gallery-picture" src="./assets/images/Polymorphism-Exercise-Relox-236.png"
+                        alt="Bird-Polymorphism">
                 </a>
             </div>
             <div class="swiper-slide">
-                <a class="single_image" id="single_image6" href="./assets/images/pngwave 1.png">
-                    <h2 class="gallery-title">Design</h2>
+                <a class="single_image" id="single_image6" href="./assets/images/RELOX_W06_LOGO-1000.png">
+                    <h2 class="gallery-title">Logo</h2>
                     <p class="gallery-designer">Tricia Relox</p>
-                    <img class="gallery-picture" src="./assets/images/pngwave 1.png" alt="marvels-image">
+                    <img class="gallery-picture" src="./assets/images/RELOX_W06_LOGO-236.png" alt="Relox-Logo">
                 </a>
             </div>
             <div class="swiper-slide">
-                <a class="single_image" id="single_image7" href="./assets/images/splash-color 1.png">
-                    <h2 class="gallery-title">Design</h2>
+                <a class="single_image" id="single_image7" href="./assets/images/relox4-1000.png">
+                    <h2 class="gallery-title">Drawing</h2>
                     <p class="gallery-designer">Tricia Relox</p>
-                    <img class="gallery-picture" src="./assets/images/splash-color 1.png" alt="splash-image">
+                    <img class="gallery-picture" src="./assets/images/relox4-236.png" alt="Relox-Drawing">
                 </a>
             </div>
             <div class="swiper-slide">
-                <a class="single_image" id="single_image8" href="./assets/images/girl-painting 1.png">
-                    <h2 class="gallery-title">Design</h2>
+                <a class="single_image" id="single_image8" href="./assets/images/dragon-1000.png">
+                    <h2 class="gallery-title">Drawing</h2>
                     <p class="gallery-designer">Tricia Relox</p>
-                    <img class="gallery-picture" src="./assets/images/girl-painting 1.png" alt="girl-painting">
+                    <img class="gallery-picture" src="./assets/images/dragon-236.png" alt="Dragon">
                 </a>
             </div>
             <div class="swiper-slide">
-                <a class="single_image" id="single_image9" href="./assets/images/png-artwork-5 1.png">
-                    <h2 class="gallery-title">Design</h2>
+                <a class="single_image" id="single_image9" href="./assets/images/Parrot Low Poly-1000.png">
+                    <h2 class="gallery-title">Polymorphism</h2>
                     <p class="gallery-designer">Prince Velasco</p>
-                    <img class="gallery-picture" src="./assets/images/png-artwork-5 1.png" alt="sumo-image">
+                    <img class="gallery-picture" src="./assets/images/Parrot Low Poly-236.png" alt="Parrot">
                 </a>
             </div>
             <div class="swiper-slide">
-                <a class="single_image" id="single_image10" href="./assets/images/pngwave 1.png">
-                    <h2 class="gallery-title">Design</h2>
+                <a class="single_image" id="single_image10" href="./assets/images/Superman Typography-1000.png">
+                    <h2 class="gallery-title">Superman</h2>
                     <p class="gallery-designer">Prince Velasco</p>
-                    <img class="gallery-picture" src="./assets/images/pngwave 1.png" alt="marvels-image">
+                    <img class="gallery-picture" src="./assets/images/Superman Typography-236.png" alt="Superman">
                 </a>
             </div>
             <div class="swiper-slide">
-                <a class="single_image" id="single_image11" href="./assets/images/splash-color 1.png">
-                    <h2 class="gallery-title">Design</h2>
+                <a class="single_image" id="single_image11" href="./assets/images/Tree Pointilism-1000.png">
+                    <h2 class="gallery-title">Pointilism</h2>
                     <p class="gallery-designer">Prince Velasco</p>
-                    <img class="gallery-picture" src="./assets/images/splash-color 1.png" alt="splash-image">
+                    <img class="gallery-picture" src="./assets/images/Tree Pointilism-236.png" alt="Tree-Pointilism">
                 </a>
             </div>
             <div class="swiper-slide">
-                <a class="single_image" id="single_image12" href="./assets/images/girl-painting 1.png">
-                    <h2 class="gallery-title">Design</h2>
+                <a class="single_image" id="single_image12" href="./assets/images/VELASCO_Prince_LOGO-1000.png">
+                    <h2 class="gallery-title">Logo</h2>
                     <p class="gallery-designer">Prince Velasco</p>
-                    <img class="gallery-picture" src="./assets/images/girl-painting 1.png" alt="girl-painting">
+                    <img class="gallery-picture" src="./assets/images/VELASCO_Prince_LOGO-236.png" alt="Prince-Logo">
+                </a>
+            </div>
+            <div class="swiper-slide">
+                <a class="single_image" id="single_image13" href="./assets/images/Revamp Page 2-1000.png">
+                    <h2 class="gallery-title">Revamp</h2>
+                    <p class="gallery-designer">Jc Garon</p>
+                    <img class="gallery-picture" src="./assets/images/Revamp Page 1-236.png" alt="Revamp-Page-1">
+                </a>
+            </div>
+            <div class="swiper-slide">
+                <a class="single_image" id="single_image14" href="./assets/images/Revamp Page 5-1000.png">
+                    <h2 class="gallery-title">Revamp</h2>
+                    <p class="gallery-designer">Jc Garon</p>
+                    <img class="gallery-picture" src="./assets/images/Revamp Page 2-236.png" alt="Revamp-Page-2">
+                </a>
+            </div>
+            <div class="swiper-slide">
+                <a class="single_image" id="single_image15" href="./assets/images/Revamp Page 6-1000.png">
+                    <h2 class="gallery-title">Revamp</h2>
+                    <p class="gallery-designer">Jc Garon</p>
+                    <img class="gallery-picture" src="./assets/images/Revamp Page 3-236.png" alt="Revamp-Page-3">
+                </a>
+            </div>
+            <div class="swiper-slide">
+                <a class="single_image" id="single_image16" href="./assets/images/Revamp Page 7-1000.png">
+                    <h2 class="gallery-title">Revamp</h2>
+                    <p class="gallery-designer">Jc Garon</p>
+                    <img class="gallery-picture" src="./assets/images/Revamp Page 4-236.png" alt="Revamp-Page-4">
+                </a>
+            </div>
+            <div class="swiper-slide">
+                <a class="single_image" id="single_image17" href="./assets/images/RELOX_1-1000.png">
+                    <h2 class="gallery-title">Revamp</h2>
+                    <p class="gallery-designer">Tricia Relox</p>
+                    <img class="gallery-picture" src="./assets/images/RELOX_1-236.png" alt="Revamp-Page-1">
+                </a>
+            </div>
+            <div class="swiper-slide">
+                <a class="single_image" id="single_image18" href="./assets/images/RELOX_2-1000.png">
+                    <h2 class="gallery-title">Revamp</h2>
+                    <p class="gallery-designer">Tricia Relox</p>
+                    <img class="gallery-picture" src="./assets/images/RELOX_2-236.png" alt="Revamp-Page-2">
+                </a>
+            </div>
+            <div class="swiper-slide">
+                <a class="single_image" id="single_image19" href="./assets/images/RELOX_3-1000.png">
+                    <h2 class="gallery-title">Revamp</h2>
+                    <p class="gallery-designer">Tricia Relox</p>
+                    <img class="gallery-picture" src="./assets/images/RELOX_3-236.png" alt="Revamp-Page-3">
+                </a>
+            </div>
+            <div class="swiper-slide">
+                <a class="single_image" id="single_image20" href="./assets/images/RELOX_4-1000.png">
+                    <h2 class="gallery-title">Revamp</h2>
+                    <p class="gallery-designer">Tricia Relox</p>
+                    <img class="gallery-picture" src="./assets/images/RELOX_4-236.png" alt="Revamp-Page-4">
+                </a>
+            </div>
+            <div class="swiper-slide">
+                <a class="single_image" id="single_image21" href="./assets/images/Mobile Revamp Page 2-1000.png">
+                    <h2 class="gallery-title">Revamp</h2>
+                    <p class="gallery-designer">Prince Velasco</p>
+                    <img class="gallery-picture" src="./assets/images/Mobile Revamp Page 3-236.png" alt="Revamp-Page-1">
+                </a>
+            </div>
+            <div class="swiper-slide">
+                <a class="single_image" id="single_image22" href="./assets/images/Mobile Revamp Page 3-1000.png">
+                    <h2 class="gallery-title">Revamp</h2>
+                    <p class="gallery-designer">Prince Velasco</p>
+                    <img class="gallery-picture" src="./assets/images/Mobile Revamp Page 5-236.png" alt="Revamp-Page-2">
+                </a>
+            </div>
+            <div class="swiper-slide">
+                <a class="single_image" id="single_image23" href="./assets/images/Mobile Revamp Page 4-1000.png">
+                    <h2 class="gallery-title">Revamp</h2>
+                    <p class="gallery-designer">Prince Velasco</p>
+                    <img class="gallery-picture" src="./assets/images/Mobile Revamp Page 6-236.png" alt="Revamp-Page-3">
+                </a>
+            </div>
+            <div class="swiper-slide">
+                <a class="single_image" id="single_image24" href="./assets/images/Mobile Revamp Page 1-1000.png">
+                    <h2 class="gallery-title">Revamp</h2>
+                    <p class="gallery-designer">Prince Velasco</p>
+                    <img class="gallery-picture" src="./assets/images/Mobile Revamp Page 7-236.png" alt="Revamp-Page-4">
                 </a>
             </div>
         </section>
@@ -184,7 +269,7 @@
         });
 
         $(document).ready(function () {
-            $('#single_image1, #single_image2, #single_image3, #single_image4, #single_image5, #single_image6, #single_image7, #single_image8, #single_image9, #single_image10, #single_image11, #single_image12')
+            $('#single_image1, #single_image2, #single_image3, #single_image4, #single_image5, #single_image6, #single_image7, #single_image8, #single_image9, #single_image10, #single_image11, #single_image12, #single_image13, #single_image14, #single_image15, #single_image16, #single_image17, #single_image18, #single_image19, #single_image20, #single_image21, #single_image22, #single_image23, #single_image24')
                 .fancybox({
                     'transitionIn': 'elastic',
                     'transitionOut': 'fade',
