about page responsiveness issue solved

--- a/about.html
+++ b/about.html
@@ -13,14 +13,14 @@
 
     <!-- Custom Script -->
     <script>
-        window.addEventListener('load', function () {
-            document.documentElement.scrollTop = 0;
+        // window.addEventListener('load', function () {
+        //     document.documentElement.scrollTop = 0;
 
-            $("#firstname").val("");
-            $("#lastname").val("");
-            $("#email").val("");
-            $("#textarea").val("");
-        });
+        //     $("#firstname").val("");
+        //     $("#lastname").val("");
+        //     $("#email").val("");
+        //     $("#textarea").val("");
+        // });
     </script>
 
     <!-- SWEETALERT -->
@@ -133,16 +133,16 @@
         <footer class="about-social-links">
             <div class="about-main-container">
                 <a class="social-links-container" href="https://www.linkedin.com/">
-                    <img src="./assets/images/linkedin-in-brands 1.svg" alt="linkedin-icon">
+                    <img class="about-link-icon" src="./assets/images/linkedin-in-brands 1.svg" alt="linkedin-icon">
                 </a>
                 <a class="social-links-container" href="http://www.facebook.com/profile">
-                    <img src="./assets/images/facebook-f-brands 1.svg" alt="facebook-icon">
+                    <img class="about-link-icon" src="./assets/images/facebook-f-brands 1.svg" alt="facebook-icon">
                 </a>
                 <a class="social-links-container" href="www.instagram.com">
-                    <img src="./assets/images/instagram-brands 1.svg" alt="instagram-icon">
+                    <img class="about-link-icon" src="./assets/images/instagram-brands 1.svg" alt="instagram-icon">
                 </a>
                 <a class="social-links-container" href="https://github.com/">
-                    <img src="./assets/images/github-brands 1.svg" alt="github-icon">
+                    <img class="about-link-icon" src="./assets/images/github-brands 1.svg" alt="github-icon">
                 </a>
             </div>
             <div class="copyright">
