Trophy Icon added

--- a/service.html
+++ b/service.html
@@ -109,7 +109,7 @@
                 <p class="work-description work-inside-content">Happy Clients</p>
             </div>
             <div class="happy-client work-content">
-                <img class="work-icon work-inside-content" src="./assets/images/user-solid 1.svg" alt="user-icon">
+                <img class="work-icon work-inside-content" src="./assets/images/trophy-solid 1.svg" alt="trophy-icon">
                 <p><span id="award-number" class="work-number work-inside-content">254</span></p>
                 <p class="work-description work-inside-content">Awards</p>
             </div>
