--- a/about.html
+++ b/about.html
@@ -13,14 +13,14 @@
 
     <!-- Custom Script -->
     <script>
-        // window.addEventListener('load', function () {
-        //     document.documentElement.scrollTop = 0;
+        window.addEventListener('load', function () {
+            document.documentElement.scrollTop = 0;
 
-        //     $("#firstname").val("");
-        //     $("#lastname").val("");
-        //     $("#email").val("");
-        //     $("#textarea").val("");
-        // });
+            $("#firstname").val("");
+            $("#lastname").val("");
+            $("#email").val("");
+            $("#textarea").val("");
+        });
     </script>
 
     <!-- SWEETALERT -->
