adding developer-description

--- a/member.html
+++ b/member.html
@@ -50,15 +50,13 @@
                 <div class="description-jc developers-description">
                     <h1 class="developer-name">John Christian Garon</h1>
                     <p class="skills">Web Developer</p>
-                    <p class="developer-description">Currently on my 2nd year in taking up Bachelor of Science in
-                        Information Technology with Specialization on Web and Mobile Development at Far Eastern
-                        University Institute of Technology. I have completed certain projects namely Library System: The
-                        Final Project, and the Travel Agency System: C++ Final Project in year 2019. In the same year, I
-                        became a Certified Microsoft Technology Associate in Database Fundamentals. In year 2018, I was
-                        also able to pass for the Tesda National Certificate in Computer System Servicing NCII.
-                        Knowledgeable in creating website layout or user interfaces by using standard HTML/CSS, &
-                        Javascript practices. Can gather and refine specifications and requirements based on technical
-                        needs. Trustworthy. Competent. Goal-Oriented. Passionate.</p>
+                    <p class="developer-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Pellentesque quis magna vel tortor
+                        bibendum porta. In sagittis dapibus quam id euismod. Curabitur mattis eleifend varius. Sed
+                        mattis nibh ipsum, sed rutrum odio congue id. Suspendisse fermentum nisi sapien, at suscipit
+                        purus ultrices et. Praesent ut ex diam. Nam aliquam fermentum consequat. Mauris malesuada nisl
+                        nec volutpat efficitur. Etiam sagittis viverra sollicitudin. Aliquam malesuada nulla non enim
+                        egestas tempor.</p>
                 </div>
             </div>
             <div class="developer-line">
@@ -100,13 +98,7 @@
                 <div class="description-prince developers-description">
                     <h1 class="developer-name">Prince Carl Velasco</h1>
                     <p class="skills">Web Developer</p>
-                    <p class="developer-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Pellentesque quis magna vel tortor
-                        bibendum porta. In sagittis dapibus quam id euismod. Curabitur mattis eleifend varius. Sed
-                        mattis nibh ipsum, sed rutrum odio congue id. Suspendisse fermentum nisi sapien, at suscipit
-                        purus ultrices et. Praesent ut ex diam. Nam aliquam fermentum consequat. Mauris malesuada nisl
-                        nec volutpat efficitur. Etiam sagittis viverra sollicitudin. Aliquam malesuada nulla non enim
-                        egestas tempor.</p>
+                    <p class="developer-description">Currently studying in FEU Institute of Technology with the course of Information Technology Specialized in Web and Mobile Application. Proficient in three different programming languages namely: Javascript, PostgreSQL  and Python. Graduated on August 2023 with the age of 23 years old. Deployed all of the portfolio projects at Github with the use of Git Bash which is also a skill to add. For all of the certificates and achievements please go to my Linked In account</p>
                 </div>
             </div>
         </section>
