Validated about.html

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ALPHA - About Us</title>
-    <link rel="icon" type="image/png" href="./assets/images/Alpha Logo.png">
+    <link rel="icon" type="image/png" href="./assets/images/Alpha-Logo.png">
 
     <!-- Custom Style -->
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -61,34 +61,34 @@
                 </p>
             </div>
             <div class="aboutus-image-right">
-                <img class="image-programmer" src="./assets/images/woman-sitting-in-front-laptop-1181677 1.png"
+                <img class="image-programmer" src="./assets/images/woman-sitting-in-front-laptop-11816771.png"
                     alt="girl-programmer">
             </div>
         </section>
         <section class="assurance-main-description">
             <div class="quality-content about-content-container">
-                <img class="content-icons quality-content-img" src="./assets/images/gem-regular 1.svg" alt="gem-image">
+                <img class="content-icons quality-content-img" src="./assets/images/gem-regular-1.svg" alt="gem-image">
                 <h2 class="content-title">Quality</h2>
                 <p class="content-description">Donec sodales neque eget augue dignissim, eu venenatis velit blandit.
                     Fusce vestibulum varius mi vel
                     ultrices. </p>
             </div>
             <div class="profession-content about-content-container">
-                <img class="content-icons" src="./assets/images/thumbs-up-regular 1.svg" alt="thumbs-up-image">
+                <img class="content-icons" src="./assets/images/thumbs-up-regular-1.svg" alt="thumbs-up-image">
                 <h2 class="content-title">Professionalism</h2>
                 <p class="content-description">Donec sodales neque eget augue dignissim, eu venenatis velit blandit.
                     Fusce vestibulum varius mi vel
                     ultrices. </p>
             </div>
             <div class="experience-content about-content-container">
-                <img class="content-icons" src="./assets/images/briefcase-solid 1.svg" alt="briefcase-image">
+                <img class="content-icons" src="./assets/images/briefcase-solid-1.svg" alt="briefcase-image">
                 <h2 class="content-title">Experience</h2>
                 <p class="content-description">Donec sodales neque eget augue dignissim, eu venenatis velit blandit.
                     Fusce vestibulum varius mi vel
                     ultrices. </p>
             </div>
             <div class="honors-content about-content-container">
-                <img class="content-icons" src="./assets/images/award-solid 1.svg" alt="award-image">
+                <img class="content-icons" src="./assets/images/award-solid-1.svg" alt="award-image">
                 <h2 class="content-title">Honors</h2>
                 <p class="content-description">Donec sodales neque eget augue dignissim, eu venenatis velit blandit.
                     Fusce vestibulum varius mi vel
@@ -98,7 +98,7 @@
         </section>
         <section class="contact-main-container">
             <div class="about contact-about-page-title">
-                <h1>CONTACT</h1>
+                <h2>CONTACT</h2>
                 <div class="contact-about-line-below">
                     <div class="about-contact-line"></div>
                 </div>
@@ -133,16 +133,16 @@
         <footer class="about-social-links">
             <div class="about-main-container">
                 <a class="social-links-container" href="https://www.linkedin.com/">
-                    <img class="about-link-icon" src="./assets/images/linkedin-in-brands 1.svg" alt="linkedin-icon">
+                    <img class="about-link-icon" src="./assets/images/linkedin-in-brands-1.svg" alt="linkedin-icon">
                 </a>
                 <a class="social-links-container" href="http://www.facebook.com/profile">
-                    <img class="about-link-icon" src="./assets/images/facebook-f-brands 1.svg" alt="facebook-icon">
+                    <img class="about-link-icon" src="./assets/images/facebook-f-brands-1.svg" alt="facebook-icon">
                 </a>
                 <a class="social-links-container" href="www.instagram.com">
-                    <img class="about-link-icon" src="./assets/images/instagram-brands 1.svg" alt="instagram-icon">
+                    <img class="about-link-icon" src="./assets/images/instagram-brands-1.svg" alt="instagram-icon">
                 </a>
                 <a class="social-links-container" href="https://github.com/">
-                    <img class="about-link-icon" src="./assets/images/github-brands 1.svg" alt="github-icon">
+                    <img class="about-link-icon" src="./assets/images/github-brands-1.svg" alt="github-icon">
                 </a>
             </div>
             <div class="copyright">
@@ -151,7 +151,7 @@
         </footer>
 
         <div class="scroll-top">
-            <img class="scroll-top-button" src="./assets/images/angle-up-solid 1.svg" alt="arrow-up">
+            <img class="scroll-top-button" src="./assets/images/angle-up-solid-1.svg" alt="arrow-up">
         </div>
 
     </main>
@@ -160,7 +160,7 @@
     <script type="text/javascript" src="./assets/javascript/TimelineLite/TimelineLite.min.js"></script>
 
     <!-- CSS Plugin -->
-    <script type="text/javascript" src="./assets/javascript/CSS Plugin/CSSPlugin.min.js"></script>
+    <script type="text/javascript" src="./assets/javascript/CSS-Plugin/CSSPlugin.min.js"></script>
 
     <!-- TweenLite -->
     <script type="text/javascript" src="./assets/javascript/TweenLite/TweenLite.min.js"></script>
