--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ALPHA - Works</title>
-    <link rel="icon" type="image/png" href="./assets/images/Alpha Logo.png">
+    <link rel="icon" type="image/png" href="./assets/images/Alpha-Logo.png">
 
     <!-- Custom Style -->
     <link rel="stylesheet" href="./assets/javascript/swiper-master/package/css/swiper.css">
@@ -243,7 +243,7 @@
     <script type="text/javascript" src="./assets/javascript/TimelineLite/TimelineLite.min.js"></script>
 
     <!-- CSS Plugin -->
-    <script type="text/javascript" src="./assets/javascript/CSS Plugin/CSSPlugin.min.js"></script>
+    <script type="text/javascript" src="./assets/javascript/CSS-Plugin/CSSPlugin.min.js"></script>
 
     <!-- TweenLite -->
     <script type="text/javascript" src="./assets/javascript/TweenLite/TweenLite.min.js"></script>
