--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ALPHA - Developers</title>
-    <link rel="icon" type="image/png" href="./assets/images/Alpha Logo.png">
+    <link rel="icon" type="image/png" href="./assets/images/Alpha-Logo.png">
 
     <!-- Custom Style -->
     <link rel="stylesheet" href="./assets/css/style.css">
