--- a/contact.html
+++ b/contact.html
@@ -50,22 +50,22 @@
         <section class="contact-page-main-container">
             <div class="contact-page-content-main-container">
                 <div class="contact-location contact-content-container">
-                    <img class="contact-content-icon" src="./assets/images/home-solid 1.svg" alt="home icon">
+                    <img class="contact-content-icon" src="./assets/images/home-solid-1.svg" alt="home icon">
                     <h2 class="contact-page-title">LOCATION</h2>
                     <p class="contact-page-content-description">123, Manila, PH</p>
                 </div>
                 <div class="contact-phone contact-content-container">
-                    <img class="contact-content-icon" src="./assets/images/phone-alt-solid 1.svg" alt="phone icon">
+                    <img class="contact-content-icon" src="./assets/images/phone-alt-solid-1.svg" alt="phone icon">
                     <h2 class="contact-page-title">PHONE:</h2>
                     <p class="contact-page-content-description">(+69)123 456 7890</p>
                 </div>
                 <div class="contact-email contact-content-container">
-                    <img class="contact-content-icon" src="./assets/images/envelope-regular 1.svg" alt="email icon">
+                    <img class="contact-content-icon" src="./assets/images/envelope-regular-1.svg" alt="email icon">
                     <h2 class="contact-page-title">EMAIL</h2>
                     <p class="contact-page-content-description">alphadevelopers@gmail.com</p>
                 </div>
                 <div class="contact-socialmedia contact-content-container">
-                    <img class="contact-content-icon" src="./assets/images/link-solid 1.svg" alt="link icon">
+                    <img class="contact-content-icon" src="./assets/images/link-solid-1.svg" alt="link icon">
                     <h2 class="contact-page-title">SOCIAL MEDIA:</h2>
                     <div class="image-links">
                         <a href="http://www.facebook.com/profile">
@@ -137,7 +137,7 @@
     </div>
 
     <div class="scroll-top">
-        <img class="scroll-top-button" src="./assets/images/angle-up-solid 1.svg" alt="arrow-up">
+        <img class="scroll-top-button" src="./assets/images/angle-up-solid-1.svg" alt="arrow-up">
     </div>
 
     <!-- JQUERY -->
