--- a/member.html
+++ b/member.html
@@ -109,7 +109,7 @@
     </footer>
 
     <div class="scroll-top">
-        <img class="scroll-top-button" src="./assets/images/angle-up-solid 1.svg" alt="arrow-up">
+        <img class="scroll-top-button" src="./assets/images/angle-up-solid-1.svg" alt="arrow-up">
     </div>
 
     <!-- JQUERY -->
