--- a/service.html
+++ b/service.html
@@ -120,7 +120,7 @@
     </footer>
 
     <div class="scroll-top">
-        <img class="scroll-top-button" src="./assets/images/angle-up-solid 1.svg" alt="arrow-up">
+        <img class="scroll-top-button" src="./assets/images/angle-up-solid-1.svg" alt="arrow-up">
     </div>
 
     <!-- TimelineLite -->
