--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
                     <ul class="main-page-design" id="scene">
                         <li data-depth="0.4" class="layer">
                             <img id="rectangleBlack" class="main-page-images rectangle_black"
-                                src="./assets/images/Rectangle 9.png" alt="Rectangle-9">
+                                src="./assets/images/Rectangle-9.png" alt="Rectangle-9">
                         </li>
                         <li data-depth="0.4" class="layer">
                             <img id="circleLightColor" class="main-page-images circle_lightcolor"
-                                src="./assets/images/Ellipse 1.png" alt="Ellipse-1">
+                                src="./assets/images/Ellipse-1.png" alt="Ellipse-1">
                         </li>
                         <li data-depth="0.4" class="layer">
                             <img id="circleDarkColor" class="main-page-images circle_darkcolor"
-                                src="./assets/images/Ellipse 2.png" alt="Ellipse-2">
+                                src="./assets/images/Ellipse-2.png" alt="Ellipse-2">
                         </li>
                         <li data-depth="0.4" class="layer">
                             <img id="circleLines" class="main-page-images circle-lines"
